Update baseURL to ShioriLaws.github.io

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://shiori-learns.github.io/'
+baseURL = 'https://shiorilaws.github.io/'
 languageCode = 'ja'
 title = "Shiori's Learning Log"
 theme = 'PaperMod'
